EM-6475 arrange pact dependencies and test (#2776)