@@ -199,8 +199,16 @@ dependencies {
     contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5spring', version: versions.pact_version
     contractTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.jupiter
     contractTestRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version : versions.jupiter
+
+    contractTestImplementation group: 'au.com.dius.pact', name: 'provider', version: versions.pact_version
+    contractTestImplementation group: 'au.com.dius.pact.provider', name: 'spring6', version: versions.pact_version
+
+    contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit', version: versions.pact_version
+    contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact_version
+
     contractTestImplementation sourceSets.main.runtimeClasspath
     contractTestImplementation sourceSets.test.runtimeClasspath
+
 
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.9'
 }
@@ -377,23 +385,96 @@ task fortifyScan(type: JavaExec)  {
 }
 
 project.ext {
-    pactVersion = getCheckedOutGitCommitHash()
+    pacticipantVersion = getCheckedOutGitCommitHash()
 }
 
 static def getCheckedOutGitCommitHash() {
     'git rev-parse --verify --short HEAD'.execute().text.trim()
 }
 
-task runProviderPactVerification(type: Test) {
-    logger.lifecycle("Runnning contract Tests")
+
+task contract(type: Test) {
+    group = 'Delivery pipeline'
+    description = 'Runs the consumer Pact tests'
     useJUnitPlatform()
     testClassesDirs = sourceSets.contractTest.output.classesDirs
     classpath = sourceSets.contractTest.runtimeClasspath
-    systemProperty 'pact.verifier.publishResults', System.getProperty('pact.verifier.publishResults')
-    systemProperty 'pact.provider.version', pactVersion.toString();
+    include '**/consumer/**'
+    systemProperty 'pact.rootDir', "pacts"
+    environment("APPINSIGHTS_INSTRUMENTATIONKEY", "test-key")
 }
 
-runProviderPactVerification.finalizedBy pactVerify
+
+pact {
+    broker {
+        pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
+    }
+    publish {
+        pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
+        pactDirectory = 'pacts'
+        tags = [System.getenv("PACT_BRANCH_NAME") ?: 'Dev']
+        consumerBranch = System.getenv("PACT_BRANCH_NAME") ?: 'Dev'
+        version = project.pacticipantVersion
+    }
+}
+
+pactPublish {
+    pactPublish = project.pact.publish
+}
+
+task runAndPublishConsumerPactTests(type: Test) {
+    logger.lifecycle("Runs pact Tests")
+    testClassesDirs = sourceSets.contractTest.output.classesDirs
+    classpath = sourceSets.contractTest.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
+    include '**/consumer/**'
+}
+
+runAndPublishConsumerPactTests.dependsOn contract
+runAndPublishConsumerPactTests.finalizedBy pactPublish
+
+tasks.register('providerContractTests', Test) {
+    description = 'Runs ONLY the provider Pact verification tests.'
+    group = 'Verification'
+
+    useJUnitPlatform()
+    testClassesDirs = sourceSets.contractTest.output.classesDirs
+    classpath = sourceSets.contractTest.runtimeClasspath
+
+    include '**/provider/**'
+
+    testLogging {
+        exceptionFormat = 'full'
+        showStandardStreams = true
+    }
+
+    if (project.hasProperty('pact.verifier.publishResults')) {
+        systemProperty 'pact.verifier.publishResults', project.property('pact.verifier.publishResults')
+    }
+    if (project.hasProperty('pact.provider.version')) {
+        systemProperty 'pact.provider.version', project.property('pact.provider.version')
+    } else {
+        systemProperty 'pact.provider.version', project.pacticipantVersion
+    }
+
+    if (project.hasProperty('pact.provider.branch')) {
+        systemProperty 'pact.provider.branch', project.property('pact.provider.branch')
+    } else {
+        systemProperty 'pact.provider.branch', System.getenv("PACT_BRANCH_NAME") ?: "Dev"
+    }
+
+    doFirst {
+        println "--- Running 'providerContractTests' (including only **/provider/**) ---"
+        println "System properties for this run: ${systemProperties}"
+    }
+}
+
+tasks.register('runProviderPactVerification') {
+    description = 'Entry point for Jenkins to run provider contract tests.'
+    group = 'Verification'
+
+    dependsOn tasks.named('providerContractTests')
+}
 
 flyway {
     url = System.getenv('FLYWAY_URL')
